Готово. Выпадающий список так и не заработал.....((

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/
+.idea
 *.iws
 *.iml
 *.ipr
 
-resources/database.properties
+src/main/resources/database.properties
 
